<resources>
    <string name="app_name">Health Battle</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="loading">Loading…</string>
    <string name="debug">Debug</string>

    <string name="power">Power</string>
    <string name="skill">Skill</string>

    <string name="shoulder_press">Shoulder Press</string>
    <string name="jumping_jack">Jumping Jack</string>
    <string name="all_member">All member</string>
    <string name="workout">Workout</string>
    <string name="battle">Battle</string>
    <string name="request_title">New fight request</string>
    <string name="request_description">%s requesting fight with you.</string>
    <string name="workout_description">Harder workout, Better life!</string>
    <string name="workout_hand">Hand raise</string>
    <string name="workout_leg">Leg raise</string>
    <string name="squat">Squat</string>
    <string name="plank">Plank</string>
    <string name="stretching">Stretching</string>

    <string name="should_press_start_button_text">START</string>
    <string name="should_press_start_helper_text">Start like this</string>
    <string name="bigmatch">Big Match</string>
    <string name="workout_ready">Ready</string>
    <string name="workout_h">workout_h</string>
    <string name="good">Good job!</string>

    <!--
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user..</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>

    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="debug">Debug</string>
    -->
</resources>
